--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="evergreen-gradient text-white p-6 sticky top-0 z-20 shadow-lg rounded-b-3xl">
         <div class="flex justify-between items-center mb-4">
             <h1 class="text-2xl font-black italic tracking-tighter">
-                <i class="fas fa-bolt mr-1 text-yellow-400"></i>數神
+                <i class="fas fa-bolt mr-1 text-yellow-400"></i>數神！
             </h1>
             <label class="flex items-center gap-2 bg-black/20 px-3 py-1.5 rounded-full border border-white/10 cursor-pointer active:scale-95 transition-all">
                 <input type="checkbox" v-model="showDetails" class="accent-emerald-400 w-4 h-4 rounded">
