--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="relative">
-                        <input v-model.number="manualShopRate" @input="updateFromShopRate(); rateMode = 'custom'" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50" placeholder="輸入找換店匯率...">
+                        <input v-model.number="manualShopRate" @input="updateFromShopRate(); rateMode = 'custom'" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50" placeholder="輸入匯率...">
                     </div>
                 </div>
 
