--- a/index.html
+++ b/index.html
@@ -132,27 +132,27 @@
                     </div>
                 </div>
 
-                <div v-if="form.currency !== 'HKD'" class="bg-white/5 border border-white/10 p-4 rounded-2xl space-y-3">
-                    <div class="flex justify-between items-center">
-                        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest flex items-center gap-1">
-                            參考匯率 (1 HKD =)
-                            <span v-if="isRateCached" class="status-tag bg-amber-500/20 text-amber-500">快取數據</span>
-                        </span>
-                        <label class="flex items-center gap-1.5 cursor-pointer">
-                            <input type="checkbox" v-model="isManualRate" @change="handleManualToggle" :disabled="form.currency === 'CUSTOM'" class="w-3.5 h-3.5 accent-emerald-500 rounded">
-                            <span class="text-[10px] font-bold text-emerald-500 uppercase">自訂匯率</span>
-                        </label>
-                    </div>
-                    
-                    <div v-if="isManualRate" class="flex gap-2">
-                        <button @click="applyRateMode('cash')" :class="rateMode === 'cash' ? 'bg-emerald-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">現金模式</button>
-                        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white shadow-[0_0_10px_rgba(37,99,235,0.3)]' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">信用卡 (+1.95%)</button>
-                    </div>
+               <div v-if="form.currency !== 'HKD'" class="bg-white/5 border border-white/10 p-4 rounded-2xl space-y-3">
+    <div class="flex justify-between items-center">
+        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest flex items-center gap-1">
+            參考匯率 (1 HKD =)
+            <span v-if="isRateCached" class="status-tag bg-amber-500/20 text-amber-500">快取數據</span>
+        </span>
+        <label v-if="form.currency !== 'CUSTOM'" class="flex items-center gap-1.5 cursor-pointer">
+            <input type="checkbox" v-model="isManualRate" @change="handleManualToggle" class="w-3.5 h-3.5 accent-emerald-500 rounded">
+            <span class="text-[10px] font-bold text-emerald-500 uppercase">自訂匯率</span>
+        </label>
+    </div>
+    
+    <div v-if="isManualRate && form.currency !== 'CUSTOM'" class="flex gap-2">
+        <button @click="applyRateMode('cash')" :class="rateMode === 'cash' ? 'bg-emerald-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">現金模式</button>
+        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white shadow-[0_0_10px_rgba(37,99,235,0.3)]' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">信用卡 (+1.95%)</button>
+    </div>
 
-                    <div class="relative">
-                        <input v-model.number="manualShopRate" @input="updateFromShopRate(); rateMode = 'custom'" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50" placeholder="輸入匯率...">
-                    </div>
-                </div>
+    <div class="relative">
+        <input v-model.number="manualShopRate" @input="updateFromShopRate(); rateMode = 'custom'" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50" placeholder="輸入匯率...">
+    </div>
+</div>
 
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
