--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>數神 MathGod (完整功能精簡版)</title>
+    <title>數神 MathGod</title>
     <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/svgs/solid/bolt.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -37,7 +37,6 @@
                 <button @click="openImagePreview" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold active:scale-95 transition-all">截圖分享</button>
             </div>
         </div>
-
         <div>
             <input v-model="eventName" type="text" placeholder="輸入活動名稱 (例如: 東京之旅)" class="header-input w-full p-3 rounded-2xl text-xs outline-none font-bold">
         </div>
@@ -111,42 +110,48 @@
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5 mt-6">
             <div class="space-y-5">
                 <input v-model="form.item" type="text" placeholder="項目 (例如: 午飯)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
-                <div class="flex gap-2">
-                    <select v-model="form.currency" @change="handleCurrencyChange" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
-                        <option value="HKD">🇭🇰 HKD</option>
-                        <option value="JPY">🇯🇵 JPY</option>
-                        <option value="TWD">🇹🇼 TWD</option>
-                        <option value="CNY">🇨🇳 CNY</option>
-                        <option value="THB">🇹🇭 THB</option>
-                        <option value="CUSTOM">➕ 自訂</option>
-                    </select>
-                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
+                
+                <div class="space-y-3">
+                    <div class="flex gap-2">
+                        <select v-model="form.currency" @change="handleCurrencyChange" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
+                            <option value="HKD">🇭🇰 HKD</option>
+                            <option value="JPY">🇯🇵 JPY</option>
+                            <option value="TWD">🇹🇼 TWD</option>
+                            <option value="CNY">🇨🇳 CNY</option>
+                            <option value="THB">🇹🇭 THB</option>
+                            <option value="CUSTOM">➕ 自訂</option>
+                        </select>
+                        <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
+                    </div>
+                    <div v-if="form.currency === 'CUSTOM'">
+                        <input v-model="customCurrencyName" type="text" placeholder="輸入外幣名稱 (如: EUR)" class="input-bg w-full p-3 rounded-xl text-xs font-bold outline-none text-emerald-400">
+                    </div>
                 </div>
 
                 <div v-if="form.currency !== 'HKD'" class="bg-white/5 border border-white/10 p-4 rounded-2xl space-y-3">
                     <div class="flex justify-between items-center">
-                        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest flex items-center gap-1">匯率 (1 HKD =) <span v-if="isRateCached" class="status-tag bg-amber-500/20 text-amber-500">快取數據</span></span>
+                        <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest flex items-center gap-1">匯率 (1 HKD =) <span v-if="isRateCached" class="status-tag bg-amber-500/20 text-amber-500">快取</span></span>
                         <label v-if="form.currency !== 'CUSTOM'" class="flex items-center gap-1.5 cursor-pointer">
                             <input type="checkbox" v-model="isManualRate" @change="handleManualToggle" class="w-3.5 h-3.5 accent-emerald-500 rounded">
-                            <span class="text-[10px] font-bold text-emerald-500 uppercase">自訂匯率</span>
+                            <span class="text-[10px] font-bold text-emerald-500 uppercase">自訂</span>
                         </label>
                     </div>
                     <div v-if="isManualRate && form.currency !== 'CUSTOM'" class="flex gap-2">
-                        <button @click="applyRateMode('cash')" :class="rateMode === 'cash' ? 'bg-emerald-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold">現金</button>
-                        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold">信用卡</button>
+                        <button @click="applyRateMode('cash')" :class="rateMode === 'cash' ? 'bg-emerald-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">現金</button>
+                        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">信用卡</button>
                     </div>
                     <input v-model.number="manualShopRate" @input="updateFromShopRate" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50">
                 </div>
 
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500">誰付款？</label>
+                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰付款？</label>
                         <select v-model="form.payer" class="input-bg w-full p-3 rounded-2xl text-sm outline-none">
                             <option v-for="u in users" :key="u" :value="u">{{ u }}</option>
                         </select>
                     </div>
                     <div class="space-y-2">
-                        <div class="flex justify-between items-center"><label class="text-[10px] font-bold text-gray-500">誰參與？</label> <button @click="toggleSelectAll" class="text-[10px] text-emerald-500 font-bold uppercase">全選</button></div>
+                        <div class="flex justify-between items-center ml-1"><label class="text-[10px] font-bold text-gray-500">誰參與？</label> <button @click="toggleSelectAll" class="text-[10px] text-emerald-500 font-bold uppercase">全選</button></div>
                         <div class="input-bg max-h-32 overflow-y-auto rounded-2xl p-3 text-[10px]">
                             <div v-for="u in users" :key="u" class="flex items-center gap-3 mb-2">
                                 <input type="checkbox" :value="u" v-model="form.involved" class="w-4 h-4 rounded accent-emerald-500">
@@ -156,7 +161,7 @@
                     </div>
                 </div>
 
-                <button @click="isEditing ? saveEdit() : addExpense()" class="w-full text-white font-black py-5 rounded-[20px] evergreen-gradient shadow-xl text-sm tracking-widest active:scale-95 transition-all">
+                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl text-sm tracking-widest active:scale-95 transition-all">
                     {{ isEditing ? '儲存修改' : '確認記帳' }}
                     <span v-if="form.amount" class="ml-1 opacity-70 text-xs font-mono"> (HK${{ (form.amount * currentRate).toFixed(1) }}) </span>
                 </button>
@@ -176,6 +181,10 @@
                 </div>
             </div>
         </section>
+
+        <div v-if="(expenses.length > 0 || users.length > 0) && !isExporting" class="px-4 py-6 text-center">
+            <button @click="showClearDialog = true" class="text-red-500/40 hover:text-red-500 text-[10px] font-bold uppercase tracking-widest py-2 transition-colors"><i class="fas fa-trash-alt mr-1"></i> 清除紀錄</button>
+        </div>
     </div>
 
     <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
@@ -190,7 +199,7 @@
                 <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold">複製文字</button>
                 <button @click="shareWhatsApp" class="whatsapp-green py-4 rounded-2xl text-xs font-bold">WhatsApp</button>
             </div>
-            <button @click="showTextShare = false" class="text-gray-500 text-[10px] font-bold uppercase">關閉視窗</button>
+            <button @click="showTextShare = false" class="text-gray-500 text-[10px] font-bold uppercase">關閉</button>
         </div>
     </div>
 
@@ -212,6 +221,20 @@
         </div>
     </div>
 
+    <div v-if="showClearDialog" class="fixed inset-0 bg-black/80 backdrop-blur-sm z-[100] flex items-center justify-center p-6" @click.self="showClearDialog = false">
+        <div class="card-bg w-full max-w-xs rounded-[32px] p-6 border border-white/10 shadow-2xl text-center">
+            <h3 class="font-black text-emerald-500 mb-6">你想清除什麼？</h3>
+            <div class="space-y-4 mb-8">
+                <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer"><span class="font-bold text-sm">消費紀錄</span><input type="checkbox" v-model="clearOptions.expenses" class="w-5 h-5 accent-emerald-500"></label>
+                <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer"><span class="font-bold text-sm">朋友名單</span><input type="checkbox" v-model="clearOptions.users" class="w-5 h-5 accent-emerald-500"></label>
+            </div>
+            <div class="grid grid-cols-2 gap-3">
+                <button @click="showClearDialog = false" class="bg-gray-700 py-3 rounded-2xl text-xs font-bold">取消</button>
+                <button @click="confirmClear" class="bg-rose-600 py-3 rounded-2xl text-xs font-bold text-white">確認清除</button>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <script>
@@ -223,6 +246,8 @@ createApp({
         const isRateCached = ref(false); const isEditing = ref(false); const editIndex = ref(null);
         const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
         const showDetails = ref(false); const isGenerating = ref(false);
+        const customCurrencyName = ref(""); 
+        const showClearDialog = ref(false); const clearOptions = ref({ expenses: true, users: false });
         const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
 
         const fetchRate = async () => {
@@ -248,15 +273,25 @@ createApp({
         };
 
         const updateFromShopRate = () => { if (manualShopRate.value > 0) currentRate.value = 1 / manualShopRate.value; };
-        const handleManualToggle = () => { if (!isManualRate.value) { rateMode.value = 'cash'; fetchRate(); } };
-        const handleCurrencyChange = () => { if(form.value.currency === 'HKD') { currentRate.value = 1; manualShopRate.value = 1; isManualRate.value = false; } else { fetchRate(); } };
+        const handleManualToggle = () => { if (!isManualRate.value && form.value.currency !== 'CUSTOM') { rateMode.value = 'cash'; fetchRate(); } };
+        const handleCurrencyChange = () => { 
+            if(form.value.currency === 'CUSTOM') { isManualRate.value = true; rateMode.value = 'custom'; manualShopRate.value = ""; currentRate.value = 0; } 
+            else { isManualRate.value = false; rateMode.value = 'cash'; if(form.value.currency === 'HKD') { currentRate.value = 1; manualShopRate.value = 1; } else fetchRate(); }
+        };
         const toggleSelectAll = () => { form.value.involved = form.value.involved.length === users.value.length ? [] : [...users.value]; };
 
         const addUser = () => { const n = newUser.value.trim(); if (n && !users.value.includes(n)) { users.value.push(n); form.value.involved.push(n); if(!form.value.payer) form.value.payer = n; newUser.value = ""; } };
         const addExpense = () => {
             if (!form.value.item || !form.value.amount || !form.value.payer) return alert("請填寫正確資料");
-            expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, involved: [...form.value.involved] });
+            const finalCurrency = form.value.currency === 'CUSTOM' ? (customCurrencyName.value || "外幣") : form.value.currency;
+            expenses.value.unshift({ id: Date.now(), ...form.value, currency: finalCurrency, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, involved: [...form.value.involved] });
             form.value.item = ""; form.value.amount = "";
+        };
+
+        const confirmClear = () => {
+            if (clearOptions.value.expenses) expenses.value = [];
+            if (clearOptions.value.users) { users.value = []; form.value.involved = []; form.value.payer = ""; }
+            showClearDialog.value = false;
         };
 
         const reGenerateImage = async () => {
@@ -307,7 +342,8 @@ createApp({
         }, {deep: true});
 
         return { 
-            eventName, users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate, manualShopRate, isManualRate, rateMode, isRateCached, isGenerating,
+            eventName, users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate, manualShopRate, isManualRate, rateMode, isRateCached, isGenerating, customCurrencyName,
+            showClearDialog, clearOptions, confirmClear,
             addUser, addExpense, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
             personalStats: computed(() => users.value.map(u => {
                 let paid = 0, should = 0;
@@ -320,8 +356,19 @@ createApp({
             copyText:()=> { navigator.clipboard.writeText(shareMessage.value); alert("已複製！"); },
             shareWhatsApp:()=> { window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`); },
             removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1),
-            startEdit: (i) => { isEditing.value=true; editIndex.value=i; form.value = JSON.parse(JSON.stringify(expenses.value[i])); },
-            saveEdit: () => { expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value }; isEditing.value=false; form.value.item=""; form.value.amount=""; }
+            startEdit: (i) => { 
+                isEditing.value=true; editIndex.value=i; const exp = expenses.value[i];
+                form.value = JSON.parse(JSON.stringify(exp)); 
+                if (!['HKD','JPY','TWD','CNY','THB'].includes(exp.currency)) { form.value.currency = 'CUSTOM'; customCurrencyName.value = exp.currency; }
+                currentRate.value = exp.rateUsed || 1; isManualRate.value = true; rateMode.value = 'custom';
+                manualShopRate.value = Number((1/currentRate.value).toFixed(3));
+                window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
+            },
+            saveEdit: () => { 
+                const finalCurrency = form.value.currency === 'CUSTOM' ? (customCurrencyName.value || "外幣") : form.value.currency;
+                expenses.value[editIndex.value] = { ...form.value, currency: finalCurrency, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value }; 
+                isEditing.value=false; form.value.item=""; form.value.amount=""; 
+            }
         };
     }
 }).mount('#app');
