--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>數神 MathGod (完整功能 + 日期選擇)</title>
+    <title>⚡️數神 - 香港人的夾錢APP</title>
     <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/svgs/solid/bolt.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -69,7 +69,7 @@
             <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-2">
                 <div class="flex justify-between items-start mb-6">
                     <div>
-                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">{{ eventName || '埋單計數' }}</h2>
+                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">{{ eventName || '埋單計數：' }}</h2>
                         <p class="text-[10px] text-gray-500 -mt-2">Settlement Summary</p>
                     </div>
                     <div class="text-right">
@@ -348,7 +348,7 @@ createApp({
         });
 
         const shareMessage = computed(() => {
-            let msg = `⚡️數神埋單計數${eventName.value ? '：' + eventName.value : ''}\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數列表：\n`;
+            let msg = `⚡️埋單計數 \n${eventName.value ? '：' + eventName.value : ''}\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數列表：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
             if (showDetails.value && expenses.value.length > 0) {
                 msg += `\n📝 消費詳情：\n`; expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`);
