--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@ createApp({
         });
 
         const shareMessage = computed(() => {
-            let msg = `⚡️埋單計數 \n${eventName.value ? '：' + eventName.value : ''}\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數列表：\n`;
+            let msg = `⚡️埋單計數 ${eventName.value ? '：'\n + eventName.value : ''}\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數列表：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
             if (showDetails.value && expenses.value.length > 0) {
                 msg += `\n📝 消費詳情：\n`; expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`);
             }
-            msg += `\n大家可以找數啦！`; return msg;
+            msg += `\n💰大家可以找數啦！`; return msg;
         });
 
         onMounted(() => {
