--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div v-if="isManualRate && form.currency !== 'CUSTOM'" class="flex gap-2">
                         <button @click="applyRateMode('cash')" :class="rateMode === 'cash' ? 'bg-emerald-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">現金</button>
-                        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">信用卡</button>
+                        <button @click="applyRateMode('card')" :class="rateMode === 'card' ? 'bg-blue-600 text-white' : 'bg-white/5 text-gray-400'" class="flex-1 py-1.5 rounded-lg text-[10px] font-bold transition-all">信用卡 (+1.95%手續費)</button>
                     </div>
                     <input v-model.number="manualShopRate" @input="updateFromShopRate" :disabled="!isManualRate" type="number" step="0.001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400 disabled:opacity-50">
                 </div>
