--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <textarea readonly class="input-bg w-full h-48 p-4 rounded-2xl text-[13px] font-mono leading-relaxed" v-model="shareMessage"></textarea>
                     <div class="grid grid-cols-2 gap-3">
                         <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">複製文字</button>
-                        <button @click="shareWhatsApp" class="whatsapp-green py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">WhatsApp</button>
+                        <button @click="shareWhatsApp" class="whatsapp-green py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">分享至WhatsApp</button>
                     </div>
                 </div>
 
