--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </h1>
             <div class="flex gap-2">
                 <button @click="openShareModal" class="bg-white/20 px-6 py-2 rounded-full border border-white/30 text-[12px] font-bold active:scale-95 transition-all">
-                    <i class="fas fa-share-alt mr-2"></i>分享結果
+                    <i class="fas fa-share-alt mr-2"></i>結算並分享結果
                 </button>
             </div>
         </div>
